overflow fix

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #d8bfd8;
-    overflow: hidden;
+    overflow-x: hidden;
     animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -213,7 +213,7 @@ li {
     justify-content: space-evenly;
     align-items: center;
     width: 65%;
-    padding: 2% 2%;
+    padding: 1% 2%;
     font-weight: 700;
     border-radius: 70px;
     font-size: 30px;
@@ -231,12 +231,13 @@ li {
     line-height: 1.5;
     font-family: "Anton", sans-serif;
     letter-spacing: 3px;
+    font-size: 26px;
 }
 
 .done-btn {
     appearance: none;
    
-    width: 30px;
+    width: 35px;
     padding: 0.5%;
     height: 30px;
     background-color: rgb(126, 82, 139);
@@ -280,7 +281,7 @@ li {
 
 .task-text {
     font-weight: 700;
-    font-size: 25px;
+    font-size: 18px;
     max-width: 60%;
     padding: 0.2% 2%;
     line-height: 1.3;
@@ -294,7 +295,7 @@ li {
 .task-time {
     color: #5e5c5e;;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 1.3;
     word-wrap: break-word;
     text-align: center;
@@ -328,8 +329,14 @@ li {
 @media (max-width: 1280px) {
 
     body, html {
-        overflow: hidden;
+        overflow-x: hidden;
         height: 100%;
+    }
+
+    .completed-task {
+        font-size: 17px;
+     
+        padding: 1%;
     }
 
     #task-time {
@@ -358,7 +365,7 @@ li {
 @media (max-width: 1024px) {
 
     body, html {
-        overflow: hidden;
+       overflow-x: hidden;
         height: 100%;
         width: 100%;
 
@@ -423,7 +430,7 @@ li {
 @media (max-width: 768px) {
 
     body, html {
-        overflow: hidden;
+        overflow-x: hidden;
         height: 100%;
         width: 100%;
     }
@@ -468,7 +475,7 @@ li {
 @media (max-width: 480px) {
 
     body, html {
-        overflow: hidden;
+        overflow-x: hidden;
         height: 100%;
     }
 
